Refactor and enhance cash flow functionality
- Remove regex.dart and update validation in create_account_page and login_page
- Update CashFlow model with new fields and fromJson/toJson methods
- Implement CashFlowProvider with filtering and balance calculation
- Add CashFlowService for API interactions
- Update HomePage UI with cash flow cards and filtering options
- Implement boot process to initialize providers with user and cash flow data
- Add SVG assets for UI elements
- Update dependencies in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_native_splash: ^2.4.3
   isar: ^3.1.0+1
   toastification: ^2.3.0
+  flutter_svg: ^2.0.16
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +38,10 @@ flutter:
     - assets/logo/Dlogo.png
     - assets/logo/Llogo.png
     - assets/icons/icon-money.png
+    - assets/icons/arrow-up.svg
+    - assets/icons/arrow-down.svg
+    - assets/icons/DSort.svg
+    - assets/icons/LSort.svg
   
   fonts:
     - family: Poppins
