Update Android configuration and refactor app code
- Update Android build configuration and Gradle settings
- Remove validation_mixin.dart and refactor form validation
- Improve error handling and response formatting in API services
- Enhance CashFlowProvider with local storage and data merging
- Update UI components and add new features to various pages
- Implement proper error handling and success messages
- Refactor boot process and provider initialization
- Update dependencies and add new packages (intl, dropdown_button2)
- Configure dark mode for splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   isar: ^3.1.0+1
   toastification: ^2.3.0
   flutter_svg: ^2.0.16
+  intl: ^0.20.1
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
@@ -27,9 +29,16 @@ dev_dependencies:
 flutter_native_splash:
   image: assets/logo/Dlogo.png
   color: "#E4E4E4"
+  image_dark: assets/logo/Llogo.png
+  color_dark: "#36343A"
+  
   android_12:
-    image: assets/icons/laucher_icon.png
-    color: "#E4E4E4"
+    image: assets/icons/Dlogo.png
+    icon_background_color: "#E4E4E4"
+    image_dark: assets/icons/Llogo
+    icon_background_color_dark: "#36343A"
+
+  web: false
 
 flutter:
   uses-material-design: true
