--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   intl: ^0.20.1
   dropdown_button2: ^2.3.9
   fl_chart: ^0.69.2
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
